jg-restaurant:html

--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -11,6 +11,10 @@
 <style>
        body {
           background-color: linen;
+          background-image: url('https://png.pngtree.com/element_our/20190528/ourlarge/pngtree-free-background-png-material-colorful-squares-image_1139040.jpg');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
 }
        h2 {
           color: white;
@@ -21,7 +25,7 @@
           margin-right: 10%;
           padding: 0;
           width: 30%;
-          background-color: linen;
+          background-color: none;
           border: -2px solid #555;
 }
        li a {
