--- a/team_jg_entertainment/src/main/resources/templates/userMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/userMenu.html
@@ -8,12 +8,16 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+      body {
+         background-color: linen;
+          background-image: url('https://e7.pngegg.com/pngimages/76/529/png-clipart-graduation-back-background-people-school.png');
+          background-repeat: no-repeat;
+          background-attachment: fixed;
+          background-size: cover;
 }
-h1 {
-  color: RoyalBlue;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      h1 {
+         color: RoyalBlue;
+         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
