--- a/team_jg_entertainment/src/main/resources/templates/reservation/addReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/addReservation.html
@@ -8,12 +8,12 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+     body {
+        background-color: linen;
 }
-h2 {
-  color: MediumVioletRed;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+     h2 {
+        color: MediumVioletRed;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
@@ -36,8 +36,8 @@ h2 {
             <td><input type="text" th:field="${request.tableID}"/></td>
             <td><input type="text" th:field="${request.reservationDate}"/></td>
             <td>
-                <input type="submit" value="Add Reservation"/>
-                <input type="reset" value="Clear"/>
+                <input type="submit" value="Add Reservation" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
