--- a/team_jg_entertainment/src/main/resources/templates/table/deleteTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/deleteTable.html
@@ -9,12 +9,12 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+      body {
+         background-color: linen;
 }
-h2 {
-  color: MediumVioletRed;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+      h2 {
+         color: MediumVioletRed;
+         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
@@ -31,8 +31,8 @@ h2 {
     <form action="/deleteTable" th:object="${request}" method="post">
       <td><input type="text" th:field="${request.tableIdToRemove}"/></td>
       <td>
-        <input type="submit" value="Delete Table"/>
-        <input type="reset" value="Clear"/>
+        <input type="submit" value="Delete Table" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+        <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
       </td>
     </form>
   </tr>
