--- a/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/searchUser.html
@@ -9,12 +9,12 @@
 </head>
 
 <style>
-body {
-  background-color: linen;
+    body {
+        background-color: linen;
 }
-h2 {
-  color: MediumVioletRed;
-  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    h2 {
+        color: MediumVioletRed;
+        text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 </style>
 
@@ -32,8 +32,8 @@ h2 {
             <td><input type="text" th:field="${request.userName}"/></td>
             <td><input type="text" th:field="${request.usersSurname}"/></td>
             <td>
-                <input type="submit" value="Search User"/>
-                <input type="reset" value="Clear"/>
+                <input type="submit" value="Search User" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
