jg-restaurant:html

--- a/team_jg_entertainment/src/main/resources/templates/menuMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menuMenu.html
@@ -10,7 +10,7 @@
 <style>
      body {
           background-color: linen;
-          background-image: url('https://png.pngtree.com/background/20210709/original/pngtree-dessert-food-chinese-food-western-restaurant-menu-background-picture-image_906141.jpg');
+          background-image: url('https://d1ralsognjng37.cloudfront.net/7dc5e798-f5ce-4085-9e71-3f0b562e62c9.jpeg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
