--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 
 <style>
        body {
+          text-align: center;
           background-color: linen;
           background-image: url('https://png.pngtree.com/element_our/20190528/ourlarge/pngtree-free-background-png-material-colorful-squares-image_1139040.jpg');
           background-repeat: no-repeat;
@@ -22,7 +23,8 @@
 }
        ul {
           list-style-type: none;
-          margin-right: 10%;
+
+          margin: auto;
           padding: 0;
           width: 30%;
           background-color: none;
@@ -55,13 +57,14 @@
 
 <h2>Restaurant MAIN MENU:</h2>
 <ul>
-    <li><a href="/userMenu"><button class="/" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">User</button></a> <br></li>
-    <li><a href="/tableMenu"><button class="/" style="color: dark;
-  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Table</button></a> <br></li>
-    <li><a href="/menuMenu"><button class="/" style="color: dark;
-  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Menu</button></a> <br></li>
-    <li><a href="/reservationMenu"><button class="/" style="color: dark;
-  text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkBlue;text-align:center;font-size:17px;width:20%;">Reservation</button></a> <br></li>
+    <li><a href="/userMenu"><button class="/" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">User
+    </button></a> <br></li>
+    <li><a href="/tableMenu"><button class="/" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Table
+    </button></a> <br></li>
+    <li><a href="/menuMenu"><button class="/" style="color: dark;text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 6px darkBlue;text-align:center;font-size:18px;width:20%;">Menu
+    </button></a> <br></li>
+    <li><a href="/reservationMenu"><button class="/" style="color: dark; text-shadow: 1px 1px 2px white, 0 0 25px blue, 0 0 5px darkBlue;text-align:center;font-size:17px;width:20%;">Reservation
+    </button></a> <br></li>
 </ul>
 </body>
 
