--- a/team_hospital/src/main/resources/templates/visit/visitActions.html
+++ b/team_hospital/src/main/resources/templates/visit/visitActions.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Hospital demo project">
     <meta name="author" content="JavaGuru">
     <title>Visits repository</title>
+    <link href="/static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
 </head>
 
 <body>
