--- a/team_hospital/src/main/resources/templates/index.html
+++ b/team_hospital/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8">
     <meta name="description" content="Hospital demo project">
     <meta name="author" content="JavaGuru">
     <title>Patients repository</title>
+    <link href="/static/css/index.css" th:href="@{/css/index.css}" rel="stylesheet"/>
 </head>
 
 <body>
