jg-restaurant:searchReservation+html

--- a/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservationMenu.html
@@ -29,6 +29,7 @@
 <h3><a href="/deleteReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Delete reservation</button></a></h3>
 <h3><a href="/editReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Edit information to the reservation</button></a></h3>
 <h3><a href="/showAllReservations"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Show a list of all reservations</button></a></h3>
+<h3><a href="/searchReservation"><button class="/" style="color:Blue;text-align:center;font-size:17px;width:20%;">Search reservation in list</button></a></h3>
 
 <form action="/" method="get">
     <input type="submit" style="color:Blue;text-align:center;font-size:17px;" value="Main menu" name="Submit" />
