qwe finance project - FindUserByIdOrNameService added to web; - GenerateUserPortfolioService added to web;

--- a/team_qwe/src/main/resources/templates/userMenu.html
+++ b/team_qwe/src/main/resources/templates/userMenu.html
@@ -35,8 +35,8 @@
 <h2><a href="/userdata/addUser"><button class="/" style="width: 20%;">ADD NEW USER</button></a></h2>
 <h2><a href="/userdata/removeUser"><button class="/" style="width: 20%;">REMOVE USER</button></a></h2>
 <h2><a href="/userdata/getUserList"><button class="/" style="width: 20%;">SHOW USER LIST</button></a></h2>
-<h2><a href="/"><button class="/" style="width: 20%;">FIND USER BY NAME</button></a></h2>
-<h2><a href="/"><button class="/" style="width: 20%;">GENERATE PORTFOLIO FOR USER</button></a></h2>
+<h2><a href="/userdata/findUserByIdOrName"><button class="/" style="width: 20%;">FIND USER BY NAME</button></a></h2>
+<h2><a href="/userdata/generateUserPortfolio"><button class="/" style="width: 20%;">GENERATE PORTFOLIO FOR USER</button></a></h2>
 <h2><a href="/"><button class="/" style="width: 20%;">TRADE STOCKS (MARKET ORDER)</button></a></h2>
 <h2><a href="/userdata/getUserPortfolio"><button class="/" style="width: 20%;">SHOW USER PORTFOLIO</button></a></h2>
 <h2><a href="/"><button class="/" style="width: 20%;">SHOW USER TRADES</button></a></h2>
