--- a/team_qwe/src/main/resources/templates/userMenu.html
+++ b/team_qwe/src/main/resources/templates/userMenu.html
@@ -37,7 +37,7 @@
 <h2><a href="/userdata/getUserList"><button class="/" style="width: 20%;">SHOW USER LIST</button></a></h2>
 <h2><a href="/userdata/findUserByIdOrName"><button class="/" style="width: 20%;">FIND USER BY NAME</button></a></h2>
 <h2><a href="/userdata/generateUserPortfolio"><button class="/" style="width: 20%;">GENERATE PORTFOLIO FOR USER</button></a></h2>
-<h2><a href="/"><button class="/" style="width: 20%;">TRADE STOCKS (MARKET ORDER)</button></a></h2>
+<h2><a href="/userdata/stockMarketOrder"><button class="/" style="width: 20%;">TRADE STOCKS (MARKET ORDER)</button></a></h2>
 <h2><a href="/userdata/getUserPortfolio"><button class="/" style="width: 20%;">SHOW USER PORTFOLIO</button></a></h2>
 <h2><a href="/"><button class="/" style="width: 20%;">SHOW USER TRADES</button></a></h2>
 <h2><a href="../"><button class="/" style="width: 20%;">RETURN TO MAIN MENU</button></a></h2>
