qwe finance project - GetUserTradesService added to the web;

--- a/team_qwe/src/main/resources/templates/userMenu.html
+++ b/team_qwe/src/main/resources/templates/userMenu.html
@@ -39,7 +39,7 @@
 <h2><a href="/userdata/generateUserPortfolio"><button class="/" style="width: 20%;">GENERATE PORTFOLIO FOR USER</button></a></h2>
 <h2><a href="/userdata/stockMarketOrder"><button class="/" style="width: 20%;">TRADE STOCKS (MARKET ORDER)</button></a></h2>
 <h2><a href="/userdata/getUserPortfolio"><button class="/" style="width: 20%;">SHOW USER PORTFOLIO</button></a></h2>
-<h2><a href="/"><button class="/" style="width: 20%;">SHOW USER TRADES</button></a></h2>
+<h2><a href="/userdata/getUserTrades"><button class="/" style="width: 20%;">SHOW USER TRADES</button></a></h2>
 <h2><a href="../"><button class="/" style="width: 20%;">RETURN TO MAIN MENU</button></a></h2>
 
 </body>
