qwe finance project - some minor refactoring;

--- a/team_qwe/src/main/resources/templates/dataMenu.html
+++ b/team_qwe/src/main/resources/templates/dataMenu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="QWE finance project">
@@ -32,7 +32,7 @@
 
     <h1>Data menu</h1>
 
-    <h2><a href="/addStock"><button class="/" style="width: 20%;">ADD STOCK</button></a></h2>
+    <h2><a href="/database/addStock"><button class="/" style="width: 20%;">ADD STOCK</button></a></h2>
     <h2><button class="/" style="width: 20%;">ADD BOND</button></h2>
     <h2><a href="/removeSecurity"><button class="/" style="width: 20%;">REMOVE SECURITY</button></a></h2>
     <h2><a href="/getAllSecurityList"><button class="/" style="width: 20%;">SHOW ALL SECURITIES</button></a></h2>
