--- a/team_qwe/src/main/resources/templates/userdata/stockMarketOrder.html
+++ b/team_qwe/src/main/resources/templates/userdata/stockMarketOrder.html
@@ -62,16 +62,16 @@
                 </select></td>
             </tr>
             <tr>
-                <td style="text-align: right">Enter ticker:</td>
+                <td style="text-align: right;">Enter ticker:</td>
                 <td><input type="text" name="ticker"/></td>
             </tr>
             <tr>
-                <td style="text-align: right">Enter quantity:</td>
+                <td style="text-align: right;">Enter quantity:</td>
                 <td><input type="text" name="quantity"/></td>
             </tr>
             <tr>
                 <td></td>
-                <td style="text-align: center"><input type="submit" style="font-size: 100%;" value="CONFIRM TRADE" name="Submit"/></td>
+                <td style="text-align: center;"><input type="submit" style="font-size: 100%;" value="CONFIRM TRADE" name="Submit"/></td>
             </tr>
         </table>
     </form>
