--- a/team_qwe/src/main/resources/templates/database/addStock.html
+++ b/team_qwe/src/main/resources/templates/database/addStock.html
@@ -23,7 +23,7 @@
 <body>
 
 <fieldset>
-    <legend style="padding-bottom: 5px;">Add new stock</legend>
+    <legend style="padding-bottom: 5px;">ADD NEW STOCK</legend>
     <table>
         <form action="/database/addStock" th:object="${request}" method="post">
             <tr>
