--- a/team_jg_entertainment/src/main/resources/templates/index.html
+++ b/team_jg_entertainment/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
        body {
           text-align: center;
           background-color: linen;
-          background-image: url('https://png.pngtree.com/element_our/20190528/ourlarge/pngtree-free-background-png-material-colorful-squares-image_1139040.jpg');
+          background-image: url('https://media-cdn.tripadvisor.com/media/photo-s/17/88/cb/51/2.jpg');
           background-repeat: no-repeat;
           background-attachment: fixed;
           background-size: cover;
