--- a/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
@@ -23,8 +23,8 @@
 <table>
     <tr>
         <td>Reservation ID:</td>
-        <td>Changes: ID:visitor/table/menu/date(yyyy-MM-dd HH:mm:):</td>
-        <td>Some changes:</td>
+        <td>Choose field to change:</td>
+        <td>Add new information:</td>
     </tr>
 
     <tr>
