Patient Rest Controller.

--- a/team_hospital/src/main/resources/templates/patient/patientActions.html
+++ b/team_hospital/src/main/resources/templates/patient/patientActions.html
@@ -20,6 +20,10 @@
 <a href="/showAllPatients">Show all patients in the list</a> <br>
 <a href="/searchPatient">Search patient</a> <br>
 
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
+
 </body>
 
 </html>
