--- a/team_hospital/src/main/resources/templates/visit/visitActions.html
+++ b/team_hospital/src/main/resources/templates/visit/visitActions.html
@@ -19,6 +19,10 @@
 <a href="/showAllVisits">Show all patients in the list</a> <br>
 <a href="/searchVisit">Search patient</a> <br>
 
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit" />
+</form>
+
 </body>
 
 </html>
