qwe finance project - some minor refactoring;

--- a/team_qwe/src/main/resources/templates/dataMenu.html
+++ b/team_qwe/src/main/resources/templates/dataMenu.html
@@ -42,7 +42,7 @@
             </a></td>
         </tr>
         <tr>
-            <td><a href="/removeSecurity">
+            <td><a href="/database/removeSecurity">
                 <button class="/" style="width: 100%;">REMOVE SECURITY</button>
             </a></td>
         </tr>
