--- a/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/deleteMenu.html
@@ -11,6 +11,10 @@
 <style>
     body {
         background-color: linen;
+        background-image: url('https://mirpps.ru/assets/media/fon-dlja-prezentacii/2018/blue-flowers-bg.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
 }
     h2 {
         color: MediumVioletRed;
