--- a/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
@@ -11,6 +11,10 @@
 <style>
      body {
          background-color: linen;
+         background-image: url('https://krot.info/uploads/posts/2021-01/1610157907_2-p-krasivii-nezhnii-fon-dlya-teksta-7.jpg');
+         background-repeat: no-repeat;
+         background-attachment: fixed;
+         background-size: cover;
 }
      h2 {
          color: MediumVioletRed;
