--- a/team_jg_entertainment/src/main/resources/templates/table/addTable.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/addTable.html
@@ -11,6 +11,10 @@
 <style>
     body {
        background-color: linen;
+       background-image: url('https://i.pinimg.com/originals/38/e7/8b/38e78bf775b3ebff1ba01edd2fdf87d7.jpg');
+       background-repeat: no-repeat;
+       background-attachment: fixed;
+       background-size: cover;
 }
     h2 {
        color: MediumVioletRed;
