--- a/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
@@ -11,6 +11,10 @@
 <style>
      body {
         background-color: linen;
+        background-image: url('https://oir.mobi/uploads/posts/2021-03/1616609731_1-p-letnii-fon-dlya-prezentatsii-1.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
 }
      h2 {
         color: MediumVioletRed;
