--- a/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
+++ b/team_jg_entertainment/src/main/resources/templates/table/showAllTables.html
@@ -10,6 +10,10 @@
 <style>
        body {
            background-color: linen;
+           background-image: url('https://i.pinimg.com/originals/38/e7/8b/38e78bf775b3ebff1ba01edd2fdf87d7.jpg');
+           background-repeat: no-repeat;
+           background-attachment: fixed;
+           background-size: cover;
 }
        h2 {
            color: MediumVioletRed;
@@ -18,7 +22,7 @@
        #tables {
           font-family: Arial, Helvetica, sans-serif;
           border-collapse: collapse;
-          width: 80%;
+          width: 100%;
 }
        #tables td, #tables th {
           border: 1px solid #ddd;
@@ -31,8 +35,8 @@
           background-color: #ddd;
 }
        #tables th {
-          padding-top: 10px;
-          padding-bottom: 10px;
+          padding-top: 12px;
+          padding-bottom: 12px;
           text-align: left;
           background-color: rgba(255,0,255,0.3);
           color: white;
