--- a/team_oddJobs/src/main/resources/templates/index.html
+++ b/team_oddJobs/src/main/resources/templates/index.html
@@ -10,7 +10,9 @@
 <style type="text/css">
 
 body {
-	background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	//background-image: url('https://bti.kiev.ua/wp-content/uploads/2015/03/services.png');
+	background-image: url('https://wallup.net/wp-content/uploads/2015/07/Multicolor-maintenance-tool.jpg');
+
 	margin:2px;
 	background-size: 100%
 }
