qwe finance project - some minor refactoring;

--- a/team_qwe/src/main/resources/templates/dataMenu.html
+++ b/team_qwe/src/main/resources/templates/dataMenu.html
@@ -57,7 +57,7 @@
             </a></td>
         </tr>
         <tr>
-            <td><a href="/filter">
+            <td><a href="/database/filter">
                 <button class="/" style="width: 100%;">FILTER SECURITIES(STOCKS) BY MULTIPLE PARAMETERS</button>
             </a></td>
         </tr>
