--- a/team_qwe/src/main/resources/templates/database/filter.html
+++ b/team_qwe/src/main/resources/templates/database/filter.html
@@ -56,12 +56,11 @@
         .right {
                 text-align: right;
         }
-
 </style>
 <body>
 
 <fieldset>
-    <legend style="padding-bottom: 5px;">FILTER STOCKS</legend>
+    <legend style="padding-bottom: 5px; text-align: center;">FILTER STOCKS</legend>
 
     <fieldset class="fieldset1">
         <legend style="padding-bottom: 5px;">choose parameters</legend>
@@ -97,16 +96,19 @@
             </form>
         </table>
     </fieldset>
+    <br>
 
     <td th:if="${request.industry != null || request.marketPrice != null || request.dividends !=null || request.riskWeight != null}">
-        <fieldset>
+        <fieldset class="fieldset2">
             <legend style="padding-bottom: 5px;">set target values</legend>
             <table>
                 <form action="/database/filter" th:object="${request}" method="post">
 
                     <tr th:if="${request.industry != null}">
                         <input type="hidden" name="industry" value="industry">
-                        <select name="industry" th:field="${request.industryTarget}">
+                        <td>Industry</td>
+                        <td></td>
+                        <td><select name="industry" th:field="${request.industryTarget}">
                             <option value="Consumer Staples">Consumer Staples</option>
                             <option value="Utilities">Utilities</option>
                             <option value="Communications">Communications</option>
@@ -118,53 +120,58 @@
                             <option value="Real Estate">Real Estate</option>
                             <option value="Industrials">Industrials</option>
                             <option value="Consumer Discretionary">Consumer Discretionary</option>
-                        </select> Industry<br>
+                        </select></td>
                     </tr>
 
                     <tr th:if="${request.marketPrice != null}">
                         <input type="hidden" name="marketPrice" value="market_price">
-                        <select name="marketPriceOperator" th:field="${request.marketPriceOperator}">
+                        <td>Market price</td>
+                        <td><select name="marketPriceOperator" th:field="${request.marketPriceOperator}">
                             <option value=">">></option>
                             <option value=">=">>=</option>
                             <option value="<"><</option>
                             <option value="<="><=</option>
                             <option value="=">=</option>
-                        </select>
-                        <input type="text" style="width: 4%;" th:field="${request.marketPriceTarget}"> Market price<br>
+                        </select></td>
+                        <td><input type="text" style="width: 30%;" th:field="${request.marketPriceTarget}"></td>
                     </tr>
 
                     <tr th:if="${request.dividends != null}">
                         <input type="hidden" name="dividends" value="dividend_yield">
-                        <select name="dividendsOperator" th:field="${request.dividendsOperator}">
+                        <td>Dividends</td>
+                        <td><select name="dividendsOperator" th:field="${request.dividendsOperator}">
                             <option value=">">></option>
                             <option value=">=">>=</option>
                             <option value="<"><</option>
                             <option value="<="><=</option>
                             <option value="=">=</option>
-                        </select>
-                        <input type="text" style="width: 4%;" th:field="${request.dividendsTarget}"> Dividends<br>
+                        </select></td>
+                        <td><input type="text" style="width: 30%;" th:field="${request.dividendsTarget}"></td>
                     </tr>
 
                     <tr th:if="${request.riskWeight != null}">
                         <input type="hidden" name="riskWeight" value="risk_weight">
-                        <select name="riskWeightOperator" th:field="${request.riskWeightOperator}">
+                        <td>Risk weight</td>
+                        <td><select name="riskWeightOperator" th:field="${request.riskWeightOperator}">
                             <option value=">">></option>
                             <option value=">=">>=</option>
                             <option value="<"><</option>
                             <option value="<="><=</option>
                             <option value="=">=</option>
-                        </select>
-                        <input type="text" style="width: 4%;" th:field="${request.riskWeightTarget}"> Risk weight<br>
+                        </select></td>
+                        <td><input type="text" style="width: 30%;" th:field="${request.riskWeightTarget}"></td>
                     </tr>
-
                     <tr>
-                        <input type="submit" value="Filter" name="Submit"/>
+                        <td></td>
+                        <td></td>
+                        <td style="text-align: left;"><input type="submit" value="Filter" name="Submit"/></td>
                     </tr>
 
                 </form>
             </table>
         </fieldset>
     </td>
+    <br>
 
     <td th:if="${filtered != null}">
         <fieldset class="fieldset3">
