--- a/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
@@ -34,8 +34,8 @@
         <form action="/searchMenu" th:object="${request}" method="post">
             <td><input type="text" th:field="${request.title}"/></td>
             <td>
-                <input type="submit" value="Search Menu" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
-                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="submit" value="Search Menu" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
