--- a/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/deleteReservation.html
@@ -35,8 +35,8 @@
         <form action="/deleteReservation" th:object="${request}" method="post">
             <td><input type="text" th:field="${request.id}"/></td>
             <td>
-                <input type="submit" value="Delete Reservation" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
-                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="submit" value="Delete Reservation" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
