--- a/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
+++ b/team_jg_entertainment/src/main/resources/templates/reservation/editReservation.html
@@ -37,8 +37,8 @@
             <td><input type="text" th:field="${request.enumEditReservation}"/></td>
             <td><input type="text" th:field="${request.changes}"/></td>
             <td>
-                <input type="submit" value="Edit Reservation" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
-                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="submit" value="Edit Reservation" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
