--- a/team_jg_entertainment/src/main/resources/templates/user/addUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/addUser.html
@@ -38,8 +38,8 @@
             <td><input type="text" th:field="${request.surname}"/></td>
             <td><input type="text" th:field="${request.telephone}"/></td>
             <td>
-                <input type="submit" value="Add User" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
-                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="submit" value="Add User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
