--- a/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
@@ -35,8 +35,8 @@
             <td><input type="text" th:field="${request.userId}"/></td>
             <td><input type="text" th:field="${request.userName}"/></td>
             <td>
-                <input type="submit" value="Delete User" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
-                <input type="reset" value="Clear" style="color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="submit" value="Delete User" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
+                <input type="reset" value="Clear" style="border-radius: 12px; color:MediumVioletRed;text-align:center;font-size:17px;text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;" />
             </td>
         </form>
     </tr>
