--- a/team_oddJobs/src/main/resources/templates/index.html
+++ b/team_oddJobs/src/main/resources/templates/index.html
@@ -326,7 +326,7 @@ nav .fa {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: white;
+  background-color: inherit;
   min-width: 1px;
   box-shadow: 0px 8px 16px 0px rgba(4, 9, 30, 0.70);
   z-index: 2;
