some fixes and rest added to another class.

--- a/team_oddJobs/src/main/resources/templates/findSpecialist.html
+++ b/team_oddJobs/src/main/resources/templates/findSpecialist.html
@@ -75,6 +75,8 @@ body {
 <form action="/" method="get">
     <br>
     <input type="submit" style="font-size: 100%;" value="Back to main page" name="Submit"/>
+    <input type="reset" value="Reset"/>
+
 </form>
 
 </body>
