--- a/team_oddJobs/src/main/resources/templates/index.html
+++ b/team_oddJobs/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
 			<ul>
 
 				<li><a href="">HOME</a></li>
-				<li><a href="">ACCOUNT</a></li>
+				<li><a href="/registration">ACCOUNT</a></li>
 				<li><a href="">ADVERTISEMENTS</a></li>
 				<li><a href="">CONTACT US</a></li>
 				<div class="dropdown">
